--- a/normalize.css
+++ b/normalize.css
@@ -20,6 +20,17 @@ body {
   margin: 0;
 }
 
+/**
+ * Remove the default list styles, borders, and padding.
+ */
+
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 /* HTML5 display definitions
    ========================================================================== */
 
