--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,16 +57,15 @@ li a {
 	text-decoration: none;
 	list-style-type: none;
 
-
 }
 
 li {
 	list-style-type: none;
+
 }
 
 ul {
 	list-style-type: none;
-	padding: 0;
 	display: block;
 
 }
@@ -75,4 +74,11 @@ ul {
 .nav-bar,
 .nav-bar li {
 	display: inline;
+}
+
+
+
+
+* {
+	border-sizing: border-box; 
 }
